[project]
name = "rpcats-brm"
version = "0.1.0"
description = "Display cat information for the specified breed."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.33.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[project.scripts]
rpcats-brm = "main:main"

[build-system]
requires = [
    "setuptools>=78.1.0", 
    "wheel>=0.45.1"
]
build-backend = "setuptools.build_meta"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy"
explicit = true

